# hexagonal

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
hexagonal/app/core/domain/: address.py  customer.py
tests/unit/: test_address.py  test_customer.py
