[tool.poetry]
name = "hexagonal"
version = "0.1.0"
description = ""
authors = ["Ernane Sena <ernane.sena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
poethepoet = "^0.24.4"
mypy = "^1.7.1"

[tool.pytest.ini_options]
pythonpath = "hexagonal"
testpaths = ["tests"]

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120

[tool.poe.tasks]
format.sequence = [
    { cmd = "black hexagonal tests" },
    { cmd = "isort hexagonal tests" },
]

lint.sequence = [
    { cmd = "black --check -v hexagonal tests" },
    { cmd = "isort --check -v hexagonal tests" },
    { cmd = "flake8 hexagonal tests" },
    { cmd = "mypy --pretty hexagonal tests" },
]

test.sequence = ["format", "lint", "unit"]

[tool.poe.tasks.unit]
sequence = [
    { cmd = "pytest -vv --cov-report xml --cov-report html --cov-report term --cov=hexagonal tests/unit" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
